Fix overlap issue

--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -32,7 +32,6 @@ a {
 
 .navItem {
   position: relative;
-  z-index: 200;
   display: flex;
   align-items: center;
   justify-content: center;
